--- a/notebooks/inversion_asaf.ipynb
+++ b/notebooks/inversion_asaf.ipynb
@@ -18,6 +18,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Imports"
+      ],
+      "metadata": {
+        "id": "iBHF3CcA2XvT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install facenet-pytorch --force-reinstall --no-cache-dir"
@@ -32,13 +41,16 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
+        "import torch.optim as optim\n",
+        "import torch.nn as nn\n",
         "import pickle\n",
         "from facenet_pytorch import InceptionResnetV1\n",
         "from torchvision import transforms\n",
         "from PIL import Image\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "from scipy.spatial.distance import cosine"
+        "from scipy.spatial.distance import cosine\n",
+        "from tqdm import tqdm"
       ],
       "metadata": {
         "id": "_auF-N3R6jot"
@@ -70,6 +82,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EDA"
+      ],
+      "metadata": {
+        "id": "CnJK2pNs2caF"
+      }
     },
     {
       "cell_type": "code",
@@ -164,7 +185,7 @@
     {
       "cell_type": "code",
       "source": [
-        "img_00001.size, x.shape"
+        "img_00001.size, x_00001.shape"
       ],
       "metadata": {
         "id": "JrgAt_TXGXr3"
@@ -276,10 +297,382 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# General functions"
+      ],
+      "metadata": {
+        "id": "uQBiOQqCtAOj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_initial_image_tensor_gaussian(size=256):\n",
+        "    tensor = torch.randn(1, 3, size, size, device=device)\n",
+        "    tensor.requires_grad_(True)\n",
+        "    return tensor"
+      ],
+      "metadata": {
+        "id": "MasWG80_JCY7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_initial_image_tensor_constant_and_gaussian(size=256, color_value=0.0):\n",
+        "    tensor = torch.full((1, 3, size, size), fill_value=color_value, device=device)\n",
+        "    # Add a tiny bit of noise to break symmetry (helps gradients start moving)\n",
+        "    tensor = tensor + (torch.randn_like(tensor) * 0.01)\n",
+        "    tensor.requires_grad_(True)\n",
+        "    return tensor"
+      ],
+      "metadata": {
+        "id": "MeIucAFOwuc0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def display_loss_graph(loss_list, log_scale=False):\n",
+        "    plt.plot(loss_list)\n",
+        "    if log_scale:\n",
+        "        plt.yscale('log')\n",
+        "    plt.xlabel(\"Step\")\n",
+        "    plt.ylabel(\"Loss\")\n",
+        "    plt.title(\"Loss per Step\")\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "FxbyYDMAtE7o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def save_and_display_image(image, filename):\n",
+        "    final_image = torch.tanh(image.detach().cpu().squeeze(0))\n",
+        "    final_image = (final_image * 0.5) + 0.5\n",
+        "\n",
+        "    final_image = transforms.ToPILImage()(final_image)\n",
+        "    final_image.save(filename)\n",
+        "    display(final_image)"
+      ],
+      "metadata": {
+        "id": "8p6TG1L_s-S4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target_embedding = torch.tensor(emb_00001, dtype=torch.float32).unsqueeze(0).to(device)"
+      ],
+      "metadata": {
+        "id": "77TTEA00wTG7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### optimize random image"
+      ],
+      "metadata": {
+        "id": "UOBRbHJ6Cn15"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image = get_initial_image_tensor_gaussian()\n",
+        "num_steps = 200\n",
+        "optimizer = optim.Adam([image], lr=0.01)\n",
+        "loss_fn = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "pjQjf8sZC28H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_list = []\n",
+        "for i in tqdm(range(num_steps)):\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    normalized_image_input = torch.tanh(image * 2 - 1)\n",
+        "    current_embedding = model(normalized_image_input)\n",
+        "    loss = loss_fn(current_embedding, target_embedding)\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if (i + 1) % 100 == 0:\n",
+        "        print(f\"Step [{i+1}/{num_steps}], Loss: {loss.item():.6f}\")\n",
+        "\n",
+        "    loss_list.append(loss.item())\n",
+        "\n",
+        "final_image = image.detach().cpu().squeeze(0)\n",
+        "final_embedding = current_embedding.detach().cpu().squeeze(0)"
+      ],
+      "metadata": {
+        "id": "JhnaAaGgv-J-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display_loss_graph(loss_list=loss_list)"
+      ],
+      "metadata": {
+        "id": "GUINR4m5FHrh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "save_and_display_image(final_image, \"exp1_gaussian_noise.png\")"
+      ],
+      "metadata": {
+        "id": "fyzy1L4iE3C0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cosine_dist = cosine(emb_00001, final_embedding)\n",
+        "cosine_dist"
+      ],
+      "metadata": {
+        "id": "sxi0invdFQxg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### next try less randomized initialization"
+      ],
+      "metadata": {
+        "id": "xjOqVMVLPBtl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image = get_initial_image_tensor_constant_and_gaussian()\n",
+        "num_steps = 200\n",
+        "optimizer = optim.Adam([image], lr=0.01)\n",
+        "loss_fn = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "q7dZ7P8Twrwp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_list = []\n",
+        "for i in tqdm(range(num_steps)):\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    normalized_image_input = torch.tanh(image * 2 - 1)\n",
+        "    current_embedding = model(normalized_image_input)\n",
+        "    loss = loss_fn(current_embedding, target_embedding)\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if (i + 1) % 100 == 0:\n",
+        "        print(f\"Step [{i+1}/{num_steps}], Loss: {loss.item():.6f}\")\n",
+        "\n",
+        "    loss_list.append(loss.item())\n",
+        "\n",
+        "final_image = image.detach().cpu().squeeze(0)\n",
+        "final_embedding = current_embedding.detach().cpu().squeeze(0)"
+      ],
+      "metadata": {
+        "id": "ICDki0ZdxHBp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display_loss_graph(loss_list=loss_list)"
+      ],
+      "metadata": {
+        "id": "OAbFkhmqPRMk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "save_and_display_image(final_image, \"exp2_constant_init_and_small_noise.png\")"
+      ],
+      "metadata": {
+        "id": "Q7V8OnaxPRMl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cosine_dist = cosine(emb_00001, final_embedding)\n",
+        "cosine_dist"
+      ],
+      "metadata": {
+        "id": "4hpk4vjtPRMl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Next try, adding total variation to the loss"
+      ],
+      "metadata": {
+        "id": "7J_GKUBiIngG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_tv_loss(img_tensor):\n",
+        "    \"\"\"\n",
+        "    Computes Total Variation Loss.\n",
+        "    Expected input shape: (Batch, Channels, Height, Width)\n",
+        "    \"\"\"\n",
+        "    # Calculate horizontal differences (between columns)\n",
+        "    # Select all columns except the last one, minus all columns except the first one\n",
+        "    diff_h = img_tensor[:, :, :, :-1] - img_tensor[:, :, :, 1:]\n",
+        "\n",
+        "    # Calculate vertical differences (between rows)\n",
+        "    # Select all rows except the last one, minus all rows except the first one\n",
+        "    diff_w = img_tensor[:, :, :-1, :] - img_tensor[:, :, 1:, :]\n",
+        "\n",
+        "    # Sum the absolute differences\n",
+        "    tv_loss = torch.sum(torch.abs(diff_h)) + torch.sum(torch.abs(diff_w))\n",
+        "\n",
+        "    return tv_loss"
+      ],
+      "metadata": {
+        "id": "MF2VwMrgPy5U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image = get_initial_image_tensor_gaussian()\n",
+        "num_steps = 1000\n",
+        "tv_weight = 1e-5\n",
+        "optimizer = optim.Adam([image], lr=0.01)\n",
+        "loss_fn = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "K6nLcQznxs-J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_list = []\n",
+        "\n",
+        "for i in tqdm(range(num_steps)):\n",
+        "    # Clear old gradients\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    normalized_image_input = torch.tanh(image * 2 - 1)\n",
+        "    current_embedding = model(normalized_image_input)\n",
+        "\n",
+        "    loss_mse = loss_fn(current_embedding, target_embedding)\n",
+        "    loss_tv = get_tv_loss(image)\n",
+        "    total_loss = loss_mse + (tv_weight * loss_tv)\n",
+        "\n",
+        "    total_loss.backward()\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if (i + 1) % 100 == 0:\n",
+        "        print(f\"Step [{i+1}/{num_steps}], Loss: {total_loss.item():.6f}\")\n",
+        "\n",
+        "    loss_list.append(total_loss.item())\n",
+        "\n",
+        "final_image = image.detach().cpu().squeeze(0)\n",
+        "final_embedding = current_embedding.detach().cpu().squeeze(0)"
+      ],
+      "metadata": {
+        "id": "lzqefkwZPhPQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display_loss_graph(loss_list=loss_list)"
+      ],
+      "metadata": {
+        "id": "IArMeNtOPhPQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "save_and_display_image(final_image, \"exp3_gaussian_noise_and_tv_weight_e5.png\")"
+      ],
+      "metadata": {
+        "id": "V8ypOYrPPhPQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cosine_dist = cosine(emb_00001, final_embedding)\n",
+        "cosine_dist"
+      ],
+      "metadata": {
+        "id": "1HJ-G5BnPhPR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "TpA2Z3jnQASW"
+        "id": "thLyDDVPsyuo"
       },
       "execution_count": null,
       "outputs": []
