--- a/notebooks/inversion_asaf.ipynb
+++ b/notebooks/inversion_asaf.ipynb
@@ -308,7 +308,21 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_initial_image_tensor_gaussian(size=256):\n",
+        "def get_initial_image_tensor_uniform(size=160):\n",
+        "    tensor = torch.rand(1, 3, size, size, device=device)\n",
+        "    tensor.requires_grad_(True)\n",
+        "    return tensor"
+      ],
+      "metadata": {
+        "id": "0FmzuwM31QCl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_initial_image_tensor_gaussian(size=160):\n",
         "    tensor = torch.randn(1, 3, size, size, device=device)\n",
         "    tensor.requires_grad_(True)\n",
         "    return tensor"
@@ -322,7 +336,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_initial_image_tensor_constant_and_gaussian(size=256, color_value=0.0):\n",
+        "def get_initial_image_tensor_constant_and_gaussian(size=160, color_value=0.0):\n",
         "    tensor = torch.full((1, 3, size, size), fill_value=color_value, device=device)\n",
         "    # Add a tiny bit of noise to break symmetry (helps gradients start moving)\n",
         "    tensor = tensor + (torch.randn_like(tensor) * 0.01)\n",
@@ -384,7 +398,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### optimize random image"
+        "### Attempt 1: uniform initialization"
       ],
       "metadata": {
         "id": "UOBRbHJ6Cn15"
@@ -393,7 +407,7 @@
     {
       "cell_type": "code",
       "source": [
-        "image = get_initial_image_tensor_gaussian()\n",
+        "image = get_initial_image_tensor_uniform()\n",
         "num_steps = 200\n",
         "optimizer = optim.Adam([image], lr=0.01)\n",
         "loss_fn = nn.MSELoss()"
@@ -411,9 +425,10 @@
         "for i in tqdm(range(num_steps)):\n",
         "    optimizer.zero_grad()\n",
         "\n",
-        "    normalized_image_input = torch.tanh(image * 2 - 1)\n",
-        "    current_embedding = model(normalized_image_input)\n",
+        "    normalized_image = torch.tanh(image * 2 - 1)\n",
+        "    current_embedding = model(normalized_image)\n",
         "    loss = loss_fn(current_embedding, target_embedding)\n",
+        "\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n",
@@ -445,7 +460,7 @@
     {
       "cell_type": "code",
       "source": [
-        "save_and_display_image(final_image, \"exp1_gaussian_noise.png\")"
+        "save_and_display_image(final_image, \"exp1_uniform_init.png\")"
       ],
       "metadata": {
         "id": "fyzy1L4iE3C0"
@@ -468,7 +483,92 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### next try less randomized initialization"
+        "### Attempt 2: gaussian initialization"
+      ],
+      "metadata": {
+        "id": "J3b8mjG72-XO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image = get_initial_image_tensor_gaussian()\n",
+        "num_steps = 200\n",
+        "optimizer = optim.Adam([image], lr=0.01)\n",
+        "loss_fn = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "cQsr_RYa2-XQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_list = []\n",
+        "for i in tqdm(range(num_steps)):\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    normalized_image = torch.tanh(image * 2 - 1)\n",
+        "    current_embedding = model(normalized_image)\n",
+        "    loss = loss_fn(current_embedding, target_embedding)\n",
+        "\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if (i + 1) % 100 == 0:\n",
+        "        print(f\"Step [{i+1}/{num_steps}], Loss: {loss.item():.6f}\")\n",
+        "\n",
+        "    loss_list.append(loss.item())\n",
+        "\n",
+        "final_image = image.detach().cpu().squeeze(0)\n",
+        "final_embedding = current_embedding.detach().cpu().squeeze(0)"
+      ],
+      "metadata": {
+        "id": "YuxlAgsS2-XS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display_loss_graph(loss_list=loss_list)"
+      ],
+      "metadata": {
+        "id": "KOJ4Rz0t2-XS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "save_and_display_image(final_image, \"exp2_gaussian_init.png\")"
+      ],
+      "metadata": {
+        "id": "o7_RZqoS2-XT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cosine_dist = cosine(emb_00001, final_embedding)\n",
+        "cosine_dist"
+      ],
+      "metadata": {
+        "id": "epJLsL_U2-XT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Attempt 3: constant initialization and a bit of gaussian noise"
       ],
       "metadata": {
         "id": "xjOqVMVLPBtl"
@@ -529,7 +629,7 @@
     {
       "cell_type": "code",
       "source": [
-        "save_and_display_image(final_image, \"exp2_constant_init_and_small_noise.png\")"
+        "save_and_display_image(final_image, \"exp3_small_gaussian_init.png\")"
       ],
       "metadata": {
         "id": "Q7V8OnaxPRMl"
@@ -552,7 +652,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Next try, adding total variation to the loss"
+        "### Attempt 4: Adding Total Variation to the loss function"
       ],
       "metadata": {
         "id": "7J_GKUBiIngG"
@@ -588,9 +688,9 @@
     {
       "cell_type": "code",
       "source": [
-        "image = get_initial_image_tensor_gaussian()\n",
+        "image = get_initial_image_tensor_constant_and_gaussian()\n",
         "num_steps = 1000\n",
-        "tv_weight = 1e-5\n",
+        "tv_weight = 4e-7\n",
         "optimizer = optim.Adam([image], lr=0.01)\n",
         "loss_fn = nn.MSELoss()"
       ],
@@ -648,7 +748,7 @@
     {
       "cell_type": "code",
       "source": [
-        "save_and_display_image(final_image, \"exp3_gaussian_noise_and_tv_weight_e5.png\")"
+        "save_and_display_image(final_image, \"exp4_small_gausian_init_and_tv_weight_4e-07.png\")"
       ],
       "metadata": {
         "id": "V8ypOYrPPhPQ"
@@ -664,6 +764,223 @@
       ],
       "metadata": {
         "id": "1HJ-G5BnPhPR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Attempt 5: gaussian initialization with tv loss"
+      ],
+      "metadata": {
+        "id": "4otdrts8_ukC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image = get_initial_image_tensor_gaussian()\n",
+        "num_steps = 1000\n",
+        "tv_weight = 1e-6\n",
+        "optimizer = optim.Adam([image], lr=0.01)\n",
+        "loss_fn = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "ydibWYAa_ukD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_list = []\n",
+        "\n",
+        "for i in tqdm(range(num_steps)):\n",
+        "    # Clear old gradients\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    normalized_image_input = torch.tanh(image * 2 - 1)\n",
+        "    current_embedding = model(normalized_image_input)\n",
+        "\n",
+        "    loss_mse = loss_fn(current_embedding, target_embedding)\n",
+        "    loss_tv = get_tv_loss(image)\n",
+        "    total_loss = loss_mse + (tv_weight * loss_tv)\n",
+        "\n",
+        "    total_loss.backward()\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if (i + 1) % 100 == 0:\n",
+        "        print(f\"Step [{i+1}/{num_steps}], Loss: {total_loss.item():.6f}\")\n",
+        "\n",
+        "    loss_list.append(total_loss.item())\n",
+        "\n",
+        "final_image = image.detach().cpu().squeeze(0)\n",
+        "final_embedding = current_embedding.detach().cpu().squeeze(0)"
+      ],
+      "metadata": {
+        "id": "sx0t2lLW_ukE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display_loss_graph(loss_list=loss_list)"
+      ],
+      "metadata": {
+        "id": "U1yR0Qdl_ukE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "save_and_display_image(final_image, \"exp5_gaussian_init_and_tv_weight_1e-06.png\")"
+      ],
+      "metadata": {
+        "id": "L5ftr1it_ukF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cosine_dist = cosine(emb_00001, final_embedding)\n",
+        "cosine_dist"
+      ],
+      "metadata": {
+        "id": "GnScj21Z_ukF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Attempt 6: man face initialization"
+      ],
+      "metadata": {
+        "id": "e9Y65RT9AMEA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image_pil = Image.open(\"man_face.png\").convert(\"RGB\")\n",
+        "image = transform(image_pil).unsqueeze(0).to(device).requires_grad_(True)"
+      ],
+      "metadata": {
+        "id": "zUbcrKdvBZxk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image_pil"
+      ],
+      "metadata": {
+        "id": "ibund_shEQpV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target_embedding = torch.tensor(emb_00002, dtype=torch.float32).unsqueeze(0).to(device)"
+      ],
+      "metadata": {
+        "id": "jlktrplmIz5W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_steps = 1000\n",
+        "tv_weight = 1e-7\n",
+        "optimizer = optim.Adam([image], lr=0.01)\n",
+        "loss_fn = nn.MSELoss()"
+      ],
+      "metadata": {
+        "id": "llkZn4vrAMEC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_list = []\n",
+        "\n",
+        "for i in tqdm(range(num_steps)):\n",
+        "    # Clear old gradients\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    normalized_image_input = torch.tanh(image * 2 - 1)\n",
+        "    current_embedding = model(normalized_image_input)\n",
+        "\n",
+        "    loss_mse = loss_fn(current_embedding, target_embedding)\n",
+        "    loss_tv = get_tv_loss(image)\n",
+        "    total_loss = loss_mse + (tv_weight * loss_tv)\n",
+        "\n",
+        "    total_loss.backward()\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if (i + 1) % 100 == 0:\n",
+        "        print(f\"Step [{i+1}/{num_steps}], Loss: {total_loss.item():.6f}\")\n",
+        "\n",
+        "    loss_list.append(total_loss.item())\n",
+        "\n",
+        "final_image = image.detach().cpu().squeeze(0)\n",
+        "final_embedding = current_embedding.detach().cpu().squeeze(0)"
+      ],
+      "metadata": {
+        "id": "Uu3Ue51TAMEC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display_loss_graph(loss_list=loss_list)"
+      ],
+      "metadata": {
+        "id": "hXq7oe_6AMEC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "save_and_display_image(final_image, \"exp6_man_face_init_and_tv_weight_1e-07_b.png\")"
+      ],
+      "metadata": {
+        "id": "VNnltmlLAMED"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cosine_dist = cosine(emb_00002, final_embedding)\n",
+        "cosine_dist"
+      ],
+      "metadata": {
+        "id": "xoL-r1DrAMED"
       },
       "execution_count": null,
       "outputs": []
